--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         
         <!-- Jquery -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-        <script type="text/javascript" src="components/scripts/CarregamentoPagesMenu.js"></script>
 
+        <!-- Script -->
+        <script type="text/javascript" src="components/scripts/CarregamentoPagesMenu.js"></script>
+        
         <!-- icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
         <script src="https://kit.fontawesome.com/34fd4b8681.js" crossorigin="anonymous"></script>
@@ -22,6 +24,7 @@
         <link rel="stylesheet" type="text/css" href="/components/styles/menuStyles.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/components/styles/footerStyles.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/components/styles/sobreStyles.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="/components/styles/habilidadesStyles.css" media="screen" />
     </head>
     <body>
         <header id="menu">     
