--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head></head>
-    <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    HTML5, CSS3, JavaScript, Jquery,Bootstrap.,React, Vue, Postgresql, PHP 8, Joomla, Wordpress,Git, Github.
-                </div>
-                <div class="col">
-                    HTML5, CSS3, JavaScript, Jquery,Bootstrap.,React, Vue, Postgresql, PHP 8, Joomla, Wordpress,Git, Github.
-                </div>
+
+<head></head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row align-items-center text-center">
+            <div class="col-sm-12 col-md-6 col-lg-6">
+                <button id="html5" type="button" class="btn">
+                    <img src="/components/icones/html5-rosa.png" alt="icon_Html5">
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="fa-brands fa-css3-alt fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="fa-brands fa-square-js fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <img src="/components/img/icons8-jquery-rosa.png" alt="icon_jquery">
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="bi bi-bootstrap-fill fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="fa-brands fa-react fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="fa-brands fa-vuejs fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <img src="/components/img/icons8-postgresql-rosa.png" alt="icon_postgeesql">
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="fa-brands fa-php fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="fa-brands fa-joomla fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="fa-brands fa-wordpress fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="fa-brands fa-git-alt fa-2x"></i>
+                </button>
+                <button type="button" class="btn  btn-lg">
+                    <i class="bi bi-github fa-2x"></i>
+                </button>
             </div>
-        </div> 
-    </body>
+            <div class="col-sm-12 col-md-6 col-lg-6">
+                HTML5, CSS3, JavaScript, Jquery,Bootstrap.,React, Vue, Postgresql, PHP 8, Joomla, Wordpress,Git, Github.
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
