--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -2,6 +2,9 @@
 <html lang="pt-br">
 
 <head>
+    
+    <script type="text/javascript" src="/components/scripts/idade.js"></script>
+
 </head>
 
 <body>
@@ -15,7 +18,7 @@
 
                 <h1 class="text-center">Sobre mim</h1>
 
-                <p>Meu nome é Janaina, tenho {age} anos, gaúcha de Rio Grande - RS. Sou desenvolvedora front-end, bacharela em Sistemas de informação (2019) <i class="iconSobre bi bi-mortarboard"></i> e Mestra em engenharia de computação (2022) <i class="iconSobre bi bi-mortarboard-fill"></i>.</p>
+                <p>Meu nome é Janaina, tenho <span id="idade"></span> anos, gaúcha de Rio Grande - RS. Sou desenvolvedora front-end, bacharela em Sistemas de informação (2019) <i class="iconSobre bi bi-mortarboard"></i> e Mestra em engenharia de computação (2022) <i class="iconSobre bi bi-mortarboard-fill"></i>.</p>
 
                 <p>Desde do inicio da faculdade sou apaixonada por desenvolvimento Front-end. Estou sempre estudando o que há de novo e popular nesta área.</p>
 
@@ -23,18 +26,18 @@
                     HTML5 <i class="iconSobre fa-brands fa-html5"></i>, 
                     CSS3 <i class="iconSobre fa-brands fa-css3-alt"></i>, 
                     JavaScript <i class="iconSobre fa-brands fa-square-js"></i>, 
-                    Jquery <img class="iconSobre" src="/components/img/icons8-jquery-16.png" alt="icon_jquery"> e 
-                    Bootstrap <i class="iconSobre fa-brands fa-bootstrap"></i>.
+                    Jquery <img class="iconSobre" src="/components/icones/icons8-jquery-verde.png" alt="icon_jquery"> e 
+                    Bootstrap <i class="iconSobre bi bi-bootstrap-fill"></i>.
                 </p>
 
                 <p>Outras tecnologias e frameworks que tenho contato são: 
                     React <i class="iconSobre fa-brands fa-react"></i>, 
                     Vue <i class="iconSobre fa-brands fa-vuejs"></i>, 
-                    Postgresql <img class="iconSobre" src="/components/img/icons8-postgresql-16.png" alt="icon_postgeesql">, 
+                    Postgresql <img class="iconSobre" src="/components/icones/icons8-postgresql-verde.png" alt="icon_postgeesql">, 
                     PHP 8 <i class="iconSobre fa-brands fa-php"></i>, 
                     Joomla <i class="iconSobre fa-brands fa-joomla"></i>, 
                     Wordpress <i class="iconSobre fa-brands fa-wordpress"></i> e 
-                    Git <i class="fa-brands fa-git-alt"></i>.</p>
+                    Git <i class="iconSobre  fa-brands fa-git-alt"></i>.</p>
 
                 <p>Amo meus
                     <i class="iconSobre fa-solid fa-cat"></i> pets
