--- a/pages/home.html
+++ b/pages/home.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
     <head></head>
     <body>
-        <div class="container-fluid text-center">
+        <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center">
-                    <img id="imgHome" src="/components/img/img_home.png" alt="img_home"/>
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <img class="mx-auto d-block" id="imgHome" src="/components/img/img_home.png" alt="img_home"/>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center">
+                <div class="col-sm-12 col-md-6 col-lg-6 text-center">
                     <h1 id="textHome">Eu sou Janaina da Silva
                         <br>
                         Desenvolvedora Front-End
