--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -1,54 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head></head>
+<head>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Esconder_Text.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Bootstrap_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Css3_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Git_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Github_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Html5_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Joomla_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Jquery_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/JS_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Php_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Postgresql_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/React_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Vue_Mostrar_Esconde.js"></script>
+    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Wordpress_Mostrar_Esconde.js"></script>
+</head>
 
 <body>
     <div class="container-fluid">
         <div class="row align-items-center text-center">
             <div class="col-sm-12 col-md-6 col-lg-6">
                 <button id="html5" type="button" class="btn">
-                    <img src="/components/icones/html5-rosa.png" alt="icon_Html5">
+                    <div id="iconHtml5"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="fa-brands fa-css3-alt fa-2x"></i>
+                <button id="css3" type="button" class="btn  btn-lg">
+                    <div id="iconCss3"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="fa-brands fa-square-js fa-2x"></i>
+                <button id="javascript" type="button" class="btn  btn-lg">
+                    <div id="iconJavascript"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <img src="/components/img/icons8-jquery-rosa.png" alt="icon_jquery">
+                <button id="jquery" type="button" class="btn  btn-lg">
+                    <div id="iconJquery"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="bi bi-bootstrap-fill fa-2x"></i>
+                <button id="bootstrap" type="button" class="btn  btn-lg">
+                    <div id="iconBootstrap"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="fa-brands fa-react fa-2x"></i>
+                <button id="react" type="button" class="btn  btn-lg">
+                    <div id="iconReact"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="fa-brands fa-vuejs fa-2x"></i>
+                <button id="vue" type="button" class="btn  btn-lg">
+                    <div id="iconVue"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <img src="/components/img/icons8-postgresql-rosa.png" alt="icon_postgeesql">
+                <button id="postgresql" type="button" class="btn  btn-lg">
+                    <div id="iconPostgresql"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="fa-brands fa-php fa-2x"></i>
+                <button id="php" type="button" class="btn  btn-lg">
+                    <div id="iconPhp"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="fa-brands fa-joomla fa-2x"></i>
+                <button id="joomla" type="button" class="btn  btn-lg">
+                    <div id="iconJoomla"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="fa-brands fa-wordpress fa-2x"></i>
+                <button id="wordpress" type="button" class="btn  btn-lg">
+                    <div id="iconWordpress"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="fa-brands fa-git-alt fa-2x"></i>
+                <button id="git" type="button" class="btn  btn-lg">
+                    <div id="iconGit"></div>
                 </button>
-                <button type="button" class="btn  btn-lg">
-                    <i class="bi bi-github fa-2x"></i>
+                <button id="github" type="button" class="btn  btn-lg">
+                    <div id="iconGithub"></div>
                 </button>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6">
-                HTML5, CSS3, JavaScript, Jquery,Bootstrap.,React, Vue, Postgresql, PHP 8, Joomla, Wordpress,Git, Github.
+                <div id="textHtml5">
+                    <p>HTML5</p>
+                </div>
+                <div id="textCss3">
+                    <p>CSS3</p>
+                </div>
+                <div id="textJavaScript">
+                    <p>JavaScript</p>
+                </div>
+                <div id="textJquery">
+                    <p>Jquery</p>
+                </div>
+                <div id="textBootstrap">
+                    <p>Bootstrap</p>
+                </div>
+                <div id="textReact">
+                    <p>React</p>
+                </div>
+                <div id="textVue">
+                    <p>Vue</p>
+                </div>
+                <div id="textPostgresql">
+                    <p>Postgresql</p>
+                </div>
+                <div id="textPhp">
+                    <p>PHP 8</p>
+                </div>
+                <div id="textJoomla">
+                    <p>Joomla</p>
+                </div>
+                <div id="textWordpress">
+                    <p>Wordpress</p>
+                </div>
+                <div id="textGit">
+                    <p>Git</p>
+                </div>
+                <div id="textGithub">
+                    <p>Github</p>
+                </div>
             </div>
         </div>
     </div>
