--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -16,6 +16,8 @@
     <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/React_Mostrar_Esconde.js"></script>
     <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Vue_Mostrar_Esconde.js"></script>
     <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Wordpress_Mostrar_Esconde.js"></script>
+    
+    <title>Habilidades</title>
 </head>
 
 <body>
