--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head></head>
-    <body>
-        <h1>projetos</h1>
-    </body>
+
+<head>
+    <title>Projetos</title>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row  align-items-center">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <h1>projetos</h1>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
