--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,7 +4,7 @@
 <head>
     
     <script type="text/javascript" src="/components/scripts/idade.js"></script>
-
+    <title>Sobre mim</title>
 </head>
 
 <body>
