--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head></head>
+    <head>
+        <title>Meu portifolio</title>
+    </head>
     <body>
         <div class="container-fluid">
             <div class="row align-items-center">
