--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
             <img id="imgMenu" src="/components/img/img_menu.png" alt="img_menu"/>
             <ul>
                 <li>
-                    <a class="ativado" href="pages/home.html">
-                        <span id="tooltip" class="icon" title = "Nice tooltip"><i class="bi bi-house-heart"></i></span>
+                    <a class="ativado" href="pages/home.html" id="tooltipHome"  title = "Home">
+                        <span class="icon"><i class="bi bi-house-heart"></i></span>
                         <span class="text">Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="pages/sobre.html">
+                    <a href="pages/sobre.html"  id="tooltipSobre"  title = "Sobre mim">
                         <span class="icon"><i class="bi bi-person-circle"></i></span>
                         <span class="text">Sobre</span>
                     </a>
                 </li>
                 <li>
-                    <a href="pages/habilidades.html">
-                        <span class="icon"><i class="bi bi-person-gear"></i></span>
+                    <a href="pages/habilidades.html"  id="tooltipHabilidades"  title = "Habilidades">
+                        <span class="icon"><i class="bi bi-person-lines-fill"></i></span>
                         <span class="text">Habilidades</span>
                     </a>
                 </li>
                 <li>
-                    <a href="pages/projetos.html">
+                    <a href="pages/projetos.html"  id="tooltipHProjetos"  title = "Projetos">
                         <span class="icon"><i class="bi bi-person-gear"></i></span>
                         <span class="text">Projetos</span>
                     </a>
