--- a/pages/home.html
+++ b/pages/home.html
@@ -14,6 +14,9 @@
                         <br>
                         Desenvolvedora Front-End
                     </h1>
+
+                    <button class="btn" id="CV">Download Curriculum Vitae</button>
+                    <button class="btn" id="CL">View Currículo Lattes</button>
                 </div>
             </div>            
         </div>
