--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    
+
     <script type="text/javascript" src="/components/scripts/idade.js"></script>
     <title>Sobre mim</title>
 </head>
@@ -18,38 +18,42 @@
 
                 <h1 class="text-center">Sobre mim</h1>
 
-                <p>Meu nome é Janaina, tenho <span id="idade"></span> anos, gaúcha de Rio Grande - RS. Sou desenvolvedora front-end, bacharela em Sistemas de informação (2019) <i class="iconSobre bi bi-mortarboard"></i> e Mestra em engenharia de computação (2022) <i class="iconSobre bi bi-mortarboard-fill"></i>.</p>
+                <p>Meu nome é Janaina, tenho <span id="idade"></span> anos, gaúcha de Rio Grande - RS. Sou
+                    desenvolvedora front-end, bacharela em Sistemas de informação (2019) <i
+                        class="iconSobre bi bi-mortarboard"></i> e Mestra em engenharia de computação (2022) <i
+                        class="iconSobre bi bi-mortarboard-fill"></i>.</p>
 
-                <p>Desde do inicio da faculdade sou apaixonada por desenvolvimento Front-end. Estou sempre estudando o que há de novo e popular nesta área.</p>
+                <p>Desde do inicio da faculdade sou apaixonada por desenvolvimento Front-end. Estou sempre estudando o
+                    que há de novo e popular nesta área.</p>
 
-                <p>As principais tecnologias que tenho conhecimento são: 
-                    HTML5 <i class="iconSobre fa-brands fa-html5"></i>, 
-                    CSS3 <i class="iconSobre fa-brands fa-css3-alt"></i>, 
-                    JavaScript <i class="iconSobre fa-brands fa-square-js"></i>, 
-                    Jquery <img class="iconSobre" src="/components/icones/icons8-jquery-verde.png" alt="icon_jquery"> e 
+                <p>As principais tecnologias que tenho conhecimento são:
+                    HTML5 <i class="iconSobre fa-brands fa-html5"></i>,
+                    CSS3 <i class="iconSobre fa-brands fa-css3-alt"></i>,
+                    JavaScript <i class="iconSobre fa-brands fa-square-js"></i>,
+                    Jquery <img class="iconSobre" src="/components/icones/icons8-jquery-verde.png" alt="icon_jquery"> e
                     Bootstrap <i class="iconSobre bi bi-bootstrap-fill"></i>.
                 </p>
 
-                <p>Outras tecnologias e frameworks que tenho contato são: 
-                    React <i class="iconSobre fa-brands fa-react"></i>, 
-                    Vue <i class="iconSobre fa-brands fa-vuejs"></i>, 
-                    Postgresql <img class="iconSobre" src="/components/icones/icons8-postgresql-verde.png" alt="icon_postgeesql">, 
-                    PHP 8 <i class="iconSobre fa-brands fa-php"></i>, 
-                    Joomla <i class="iconSobre fa-brands fa-joomla"></i>, 
-                    Wordpress <i class="iconSobre fa-brands fa-wordpress"></i> e 
+                <p>Outras tecnologias e frameworks que tenho contato são:
+                    React <i class="iconSobre fa-brands fa-react"></i>,
+                    Vue <i class="iconSobre fa-brands fa-vuejs"></i>,
+                    Postgresql <img class="iconSobre" src="/components/icones/icons8-postgresql-verde.png"
+                        alt="icon_postgeesql">,
+                    PHP 8 <i class="iconSobre fa-brands fa-php"></i>,
+                    Joomla <i class="iconSobre fa-brands fa-joomla"></i>,
+                    Wordpress <i class="iconSobre fa-brands fa-wordpress"></i> e
                     Git <i class="iconSobre  fa-brands fa-git-alt"></i>.</p>
 
                 <p>Amo meus
                     <i class="iconSobre fa-solid fa-cat"></i> pets
-                    <i class="iconSobre fa-solid fa-dog"></i>, 
-                    musica <i class="iconSobre bi bi-music-note-beamed"></i>, 
-                    animes <i class="iconSobre fa-solid fa-hat-wizard"></i>, 
-                    games <i class="iconSobre fa-solid fa-gamepad"></i>, 
+                    <i class="iconSobre fa-solid fa-dog"></i>,
+                    musica <i class="iconSobre bi bi-music-note-beamed"></i>,
+                    animes <i class="iconSobre fa-solid fa-hat-wizard"></i>,
+                    games <i class="iconSobre fa-solid fa-gamepad"></i>,
                     series <i class="iconSobre fa-solid fa-clapperboard"></i>
-                    e 
+                    e
                     filmes <i class="iconSobre bi bi-film"></i>.
                 </p>
-
             </div>
         </div>
     </div>
