v. 07 pag projetos iniciada, habilidades chegando ao fim

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" type="text/css" href="/components/styles/footerStyles.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/components/styles/sobreStyles.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/components/styles/habilidadesStyles.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="/components/styles/projetosStyles.css" media="screen" />
     </head>
     <body>
         <header id="menu">     
