--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -2,107 +2,92 @@
 <html lang="pt-br">
 
 <head>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Esconder_Text.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Bootstrap_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Css3_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Git_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Github_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Html5_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Joomla_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Jquery_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/JS_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Php_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Postgresql_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/React_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Vue_Mostrar_Esconde.js"></script>
-    <script type="text/javascript" src="/components/scripts/Mostrar_Esconder/Wordpress_Mostrar_Esconde.js"></script>
-    
     <title>Habilidades</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <div class="row align-items-center text-center">
-            <div class="col-sm-12 col-md-6 col-lg-6">
-                <button id="html5" type="button" class="btn">
-                    <div id="iconHtml5"></div>
-                </button>
-                <button id="css3" type="button" class="btn  btn-lg">
-                    <div id="iconCss3"></div>
-                </button>
-                <button id="javascript" type="button" class="btn  btn-lg">
-                    <div id="iconJavascript"></div>
-                </button>
-                <button id="jquery" type="button" class="btn  btn-lg">
-                    <div id="iconJquery"></div>
-                </button>
-                <button id="bootstrap" type="button" class="btn  btn-lg">
-                    <div id="iconBootstrap"></div>
-                </button>
-                <button id="react" type="button" class="btn  btn-lg">
-                    <div id="iconReact"></div>
-                </button>
-                <button id="vue" type="button" class="btn  btn-lg">
-                    <div id="iconVue"></div>
-                </button>
-                <button id="postgresql" type="button" class="btn  btn-lg">
-                    <div id="iconPostgresql"></div>
-                </button>
-                <button id="php" type="button" class="btn  btn-lg">
-                    <div id="iconPhp"></div>
-                </button>
-                <button id="joomla" type="button" class="btn  btn-lg">
-                    <div id="iconJoomla"></div>
-                </button>
-                <button id="wordpress" type="button" class="btn  btn-lg">
-                    <div id="iconWordpress"></div>
-                </button>
-                <button id="git" type="button" class="btn  btn-lg">
-                    <div id="iconGit"></div>
-                </button>
-                <button id="github" type="button" class="btn  btn-lg">
-                    <div id="iconGithub"></div>
-                </button>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-6">
-                <div id="textHtml5">
-                    <p>HTML5</p>
+        <div id="rowP" class="row align-items-center text-center">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <h1>Habilidades</h1>
+                <div class="row">
+                    <div class="col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="html5" type="button" class="btn">
+                            <div id="iconHtml5"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="css3" type="button" class="btn  btn-lg">
+                            <div id="iconCss3"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+
+                        <button id="javascript" type="button" class="btn  btn-lg">
+                            <div id="iconJavascript"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+
+                        <button id="jquery" type="button" class="btn  btn-lg">
+                            <div id="iconJquery"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2"></div>
                 </div>
-                <div id="textCss3">
-                    <p>CSS3</p>
+                <div class="row">
+                    <div class="col-sm-1 col-md-1 col-lg-1"></div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="bootstrap" type="button" class="btn  btn-lg">
+                            <div id="iconBootstrap"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="react" type="button" class="btn  btn-lg">
+                            <div id="iconReact"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="vue" type="button" class="btn  btn-lg">
+                            <div id="iconVue"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="postgresql" type="button" class="btn  btn-lg">
+                            <div id="iconPostgresql"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="php" type="button" class="btn  btn-lg">
+                            <div id="iconPhp"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-1 col-md-1 col-lg-1"></div>
                 </div>
-                <div id="textJavaScript">
-                    <p>JavaScript</p>
-                </div>
-                <div id="textJquery">
-                    <p>Jquery</p>
-                </div>
-                <div id="textBootstrap">
-                    <p>Bootstrap</p>
-                </div>
-                <div id="textReact">
-                    <p>React</p>
-                </div>
-                <div id="textVue">
-                    <p>Vue</p>
-                </div>
-                <div id="textPostgresql">
-                    <p>Postgresql</p>
-                </div>
-                <div id="textPhp">
-                    <p>PHP 8</p>
-                </div>
-                <div id="textJoomla">
-                    <p>Joomla</p>
-                </div>
-                <div id="textWordpress">
-                    <p>Wordpress</p>
-                </div>
-                <div id="textGit">
-                    <p>Git</p>
-                </div>
-                <div id="textGithub">
-                    <p>Github</p>
+                <div class="row">
+                    <div class="col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="joomla" type="button" class="btn  btn-lg">
+                            <div id="iconJoomla"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="wordpress" type="button" class="btn  btn-lg">
+                            <div id="iconWordpress"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="git" type="button" class="btn  btn-lg">
+                            <div id="iconGit"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <button id="github" type="button" class="btn  btn-lg">
+                            <div id="iconGithub"></div>
+                        </button>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2"></div>
                 </div>
             </div>
         </div>
