--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div class="row align-items-center">
+            <div id="rowP" class="row align-items-center">
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <img class="mx-auto d-block" id="imgHome" src="/components/img/img_home.png" alt="img_home"/>
                 </div>
