--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -2,14 +2,56 @@
 <html lang="pt-br">
 
 <head>
+    <script type="text/javascript" src="/components/scripts/ampulheta.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Projetos</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <div class="row  align-items-center">
-            <div class="col-sm-12 col-md-12 col-lg-12">
+        <div id="rowP" class="row align-items-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 text-center">
                 <h1>projetos</h1>
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <div class="card">
+                            <h4 class="card-title">Em breve</h4>
+                            <div id="div1" class="fa"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <div class="card">
+                            <h4 class="card-title">Em breve</h4>
+                            <div id="div2" class="fa"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <div class="card">
+                            <h4 class="card-title">Em breve</h4>
+                            <div id="div3" class="fa"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <div class="card">
+                            <h4 class="card-title">Em breve</h4>
+                            <div id="div4" class="fa"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <div class="card">
+                            <h4 class="card-title">Em breve</h4>
+                            <div id="div5" class="fa"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <div class="card">
+                            <h4 class="card-title">Em breve</h4>
+                            <div id="div6" class="fa"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
