--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -2,14 +2,13 @@
 <html lang="pt-br">
 
 <head>
-
     <script type="text/javascript" src="/components/scripts/idade.js"></script>
     <title>Sobre mim</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <div class="row align-items-center">
+        <div id="rowP" class="row align-items-center">
             <div class="col-sm-12 col-md-5 col-lg-4">
                 <img class="rounded-circle mx-auto d-block" id="imgSobre" src="/components/img/img_minha.jpg"
                     alt="foto" />
